--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
 
     /* Robot Animation Assets & Styles */
     :root {
-      --robot-walking-sprite: url("data:image/svg+xml,%3Csvg width='80' height='40' xmlns='http://www.w3.org/2000/svg'%3E%3Crect x='5' y='5' width='30' height='30' fill='%23D62828'/%3E%3Crect x='15' y='0' width='10' height='10' fill='%23D62828'/%3E%3Crect x='2' y='15' width='5' height='15' fill='%236C757D'/%3E%3Crect x='33' y='15' width='5' height='15' fill='%236C757D'/%3E%3Crect x='45' y='5' width='30' height='30' fill='%23D62828'/%3E%3Crect x='55' y='0' width='10' height='10' fill='%23D62828'/%3E%3Crect x='42' y='10' width='5' height='15' fill='%236C757D' transform='rotate(-15 44.5 17.5)'/%3E%3Crect x='73' y='10' width='5' height='15' fill='%236C757D' transform='rotate(15 75.5 17.5)'/%3E%3C/svg%3E");
-      --robot-safe-sprite: url("data:image/svg+xml,%3Csvg width='40' height='40' xmlns='http://www.w3.org/2000/svg'%3E%3Crect x='5' y='5' width='30' height='30' fill='%2317C3B2'/%3E%3Crect x='15' y='0' width='10' height='10' fill='%2317C3B2'/%3E%3Ccircle cx='20' cy='20' r='18' stroke='%2300FF88' stroke-width='2' fill='none' opacity='0.7'/%3E%3C/svg%3E");
+      --robot-walking-sprite: url("data:image/svg+xml,%3Csvg width='120' height='40' xmlns='http://www.w3.org/2000/svg'%3E%3C!-- Frame 1: Standing ---%3E%3Crect x='5' y='8' width='25' height='25' fill='%23D62828' rx='3'/%3E%3Crect x='13' y='3' width='9' height='8' fill='%23FF4081' rx='2'/%3E%3Ccircle cx='15' cy='18' r='2' fill='%2300E0E0'/%3E%3Ccircle cx='23' cy='18' r='2' fill='%2300E0E0'/%3E%3Crect x='2' y='20' width='4' height='12' fill='%236C757D' rx='2'/%3E%3Crect x='32' y='20' width='4' height='12' fill='%236C757D' rx='2'/%3E%3C!-- Frame 2: Walking left leg forward ---%3E%3Crect x='45' y='8' width='25' height='25' fill='%23D62828' rx='3'/%3E%3Crect x='53' y='3' width='9' height='8' fill='%23FF4081' rx='2'/%3E%3Ccircle cx='55' cy='18' r='2' fill='%2300E0E0'/%3E%3Ccircle cx='63' cy='18' r='2' fill='%2300E0E0'/%3E%3Crect x='40' y='18' width='4' height='14' fill='%236C757D' rx='2' transform='rotate(-10 42 25)'/%3E%3Crect x='72' y='22' width='4' height='10' fill='%236C757D' rx='2'/%3E%3C!-- Frame 3: Walking right leg forward ---%3E%3Crect x='85' y='8' width='25' height='25' fill='%23D62828' rx='3'/%3E%3Crect x='93' y='3' width='9' height='8' fill='%23FF4081' rx='2'/%3E%3Ccircle cx='95' cy='18' r='2' fill='%2300E0E0'/%3E%3Ccircle cx='103' cy='18' r='2' fill='%2300E0E0'/%3E%3Crect x='82' y='22' width='4' height='10' fill='%236C757D' rx='2'/%3E%3Crect x='110' y='18' width='4' height='14' fill='%236C757D' rx='2' transform='rotate(10 112 25)'/%3E%3C/svg%3E");
+      --robot-safe-sprite: url("data:image/svg+xml,%3Csvg width='40' height='40' xmlns='http://www.w3.org/2000/svg'%3E%3Crect x='7' y='8' width='25' height='25' fill='%2317C3B2' rx='3'/%3E%3Crect x='15' y='3' width='9' height='8' fill='%2300FF88' rx='2'/%3E%3Ccircle cx='17' cy='18' r='2' fill='%230C0C0C'/%3E%3Ccircle cx='25' cy='18' r='2' fill='%230C0C0C'/%3E%3Crect x='4' y='20' width='4' height='12' fill='%2317C3B2' rx='2'/%3E%3Crect x='34' y='20' width='4' height='12' fill='%2317C3B2' rx='2'/%3E%3Ccircle cx='20' cy='20' r='18' stroke='%2300FF88' stroke-width='2' fill='none' opacity='0.8'/%3E%3Cpath d='M14 20 L18 24 L26 16' stroke='%2300FF88' stroke-width='2' fill='none' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
       --progress-advance-duration: 3s; /* Default, will be overridden by JS */
     }
 
@@ -126,10 +126,11 @@
       position: relative;
       width: 100%;
       height: 50px; /* Slightly reduced height for mobile */
-      background: linear-gradient(90deg, #1a1a1a 0%, #2d2d2d 100%);
+      background: linear-gradient(90deg, #1a1a1a 0%, #2d2d2d 50%, #1a1a1a 100%);
       border: 1px solid #D62828; /* hacker-red border */
       border-radius: 4px;
       overflow: hidden; /* Ensure robot stays within bounds */
+      box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.3); /* Inner shadow for depth */
     }
     @media (min-width: 640px) { /* sm breakpoint */
       .robot-progress-container {
@@ -144,27 +145,33 @@
       left: 0;
       height: 100%;
       width: 0%; /* Initial state */
-      background-color: rgba(214, 40, 40, 0.3); /* Subdued hacker-red for pending fill */
+      background: linear-gradient(90deg, 
+        rgba(214, 40, 40, 0.2) 0%, 
+        rgba(214, 40, 40, 0.4) 50%, 
+        rgba(214, 40, 40, 0.2) 100%
+      ); /* Gradient fill for pending state */
       transition: background-color 0.5s ease-in-out; /* Smooth color change on success */
+      border-radius: 3px;
     }
 
     .robot-animation-element {
       position: absolute;
-      width: 30px;   /* Smaller robot for mobile */
-      height: 30px;
-      top: 10px;     /* Adjust vertical centering for new height */
+      width: 35px;   /* Slightly larger for better visibility */
+      height: 35px;
+      top: 7px;      /* Adjust vertical centering */
       left: 0;       /* Start at the left */
       background-repeat: no-repeat;
       image-rendering: pixelated; /* Keep SVG sharp */
       z-index: 1; /* Ensure robot is above the fill */
-      background-size: 60px 30px; /* Adjusted sprite size for smaller robot */
+      background-size: 105px 35px; /* 3 frames * 35px width */
+      transition: filter 0.3s ease-in-out; /* Smooth color transitions */
     }
     @media (min-width: 640px) { /* sm breakpoint */
       .robot-animation-element {
         width: 40px;
         height: 40px;
-        top: 10px;
-        background-size: 80px 40px; /* Original sprite size */
+        top: 10px; 
+        background-size: 120px 40px; /* 3 frames * 40px width */
       }
     }
 
@@ -174,7 +181,12 @@
     }
     .robot-animation-element.robot-success + .robot-level-fill {
       width: 100%;
-      background-color: rgba(23, 195, 178, 0.4); /* Subdued hacker-green for success fill */
+      background: linear-gradient(90deg, 
+        rgba(23, 195, 178, 0.3) 0%, 
+        rgba(23, 195, 178, 0.5) 50%, 
+        rgba(23, 195, 178, 0.3) 100%
+      ); /* Success gradient fill */
+      box-shadow: 0 0 10px rgba(23, 195, 178, 0.3); /* Success glow */
     }
 
 
@@ -182,18 +194,20 @@
       background-image: var(--robot-walking-sprite);
       /* Animation: sprite sheet, movement */
       animation: 
-        robotWalkSprite 0.5s steps(2) infinite, /* 2 frames in sprite */
+        robotWalkSprite 0.6s steps(3) infinite, /* 3 frames in sprite for smoother walk */
         progressAdvance var(--progress-advance-duration) ease-in-out forwards;
+      filter: drop-shadow(0 2px 4px rgba(214, 40, 40, 0.3)); /* Subtle shadow while walking */
     }
 
     .robot-success {
       background-image: var(--robot-safe-sprite); /* Initial state for transform */
       /* Animation: transformation to success state */
       animation: robotTransformSuccess 1.5s ease-in-out forwards;
+      filter: drop-shadow(0 2px 8px rgba(23, 195, 178, 0.5)); /* Success glow */
     }
     /* Adjust robot success position based on its size */
     .robot-success {
-      left: calc(100% - 30px);
+      left: calc(100% - 35px);
     }
     @media (min-width: 640px) { /* sm breakpoint */
       .robot-success {
@@ -203,19 +217,23 @@
     
     @keyframes robotWalkSprite {
       0% { background-position: 0 0; }
-      100% { background-position: -60px 0; } /* 2 frames * 30px width (mobile) */
+      33% { background-position: -35px 0; }
+      66% { background-position: -70px 0; }
+      100% { background-position: -105px 0; } /* 3 frames * 35px width (mobile) */
     }
     @media (min-width: 640px) { /* sm breakpoint */
         @keyframes robotWalkSprite {
         0% { background-position: 0 0; }
-        100% { background-position: -80px 0; } /* 2 frames * 40px width */
+        33% { background-position: -40px 0; }
+        66% { background-position: -80px 0; }
+        100% { background-position: -120px 0; } /* 3 frames * 40px width */
         }
     }
 
 
      @keyframes progressAdvance {
       0% { left: 0; }
-      100% { left: calc(100% - 30px); } /* Robot stops at the right edge of container (mobile) */
+      100% { left: calc(100% - 35px); } /* Robot stops at the right edge of container (mobile) */
     }
      @media (min-width: 640px) { /* sm breakpoint */
         @keyframes progressAdvance {
@@ -226,33 +244,49 @@
 
 
     @keyframes fillLevelProgress {
-      0% { width: 0%; }
-      100% { width: 100%; }
+      0% { 
+        width: 0%; 
+        opacity: 0.7;
+      }
+      50% {
+        opacity: 1;
+      }
+      100% { 
+        width: 100%; 
+        opacity: 0.8;
+      }
     }
 
     @keyframes robotTransformSuccess {
       0% { 
         filter: hue-rotate(0deg) brightness(1);
-        transform: scale(1) translateX(0); 
+        transform: scale(1) translateY(0); 
         background-image: var(--robot-walking-sprite); 
-         background-position: -30px 0; /* Last frame of walk (mobile) */
+        background-position: -70px 0; /* Middle frame of walk (mobile) */
+      }
+      25% {
+        filter: hue-rotate(60deg) brightness(1.3);
+        transform: scale(1.05) translateY(-2px); /* Small bounce effect */
       }
       50% { 
-        filter: hue-rotate(120deg) brightness(1.5); /* Transition to green-ish */
-        transform: scale(1.1) translateX(0);
+        filter: hue-rotate(120deg) brightness(1.4); /* Transition to green-ish */
+        transform: scale(1.1) translateY(-3px); /* Peak of bounce */
+      }
+      75% {
+        filter: hue-rotate(140deg) brightness(1.2);
+        transform: scale(1.05) translateY(-1px);
       }
       100% { 
-        filter: hue-rotate(120deg) brightness(1.2);
-        transform: scale(1) translateX(0);
+        filter: hue-rotate(150deg) brightness(1.1) drop-shadow(0 0 8px rgba(0, 255, 136, 0.6));
+        transform: scale(1) translateY(0);
         background-image: var(--robot-safe-sprite); /* Final safe state image */
         background-position: 0 0; /* Ensure correct display of single frame */
       }
     }
     @media (min-width: 640px) { /* sm breakpoint */
         @keyframes robotTransformSuccess {
-        0% { background-position: -40px 0; /* Original last frame */ }
-        50% { /* same */ }
-        100% { /* same */ }
+        0% { background-position: -80px 0; /* Middle frame for desktop */ }
+        25%, 50%, 75%, 100% { /* same transform values */ }
         }
     }
 
