--- a/index.html
+++ b/index.html
@@ -160,6 +160,8 @@
       height: 35px;
       top: 7px;      /* Adjust vertical centering */
       left: 0;       /* Start at the left */
+     background-image: var(--robot-walking-sprite); /* Ensure robot is visible by default */
+     background-position: 0 0; /* Start with first frame */
       background-repeat: no-repeat;
       image-rendering: pixelated; /* Keep SVG sharp */
       z-index: 1; /* Ensure robot is above the fill */
