--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <title>Adv. Robot</title>
-  <link rel="icon" type="image/png" href="/AdvRobot Logo.png" />
+  <link rel="icon" type="image/png" href="/Adv Robot logo.png" />
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&family=Roboto+Mono&display=swap" rel="stylesheet">
   <style>
